# WebScraping_Amrtamya

./: README.md  pyproject.toml  requirement.txt
Scraping/: 2nd_dft.ipynb  amrtamya_products.csv  draft_1.ipynb
