[project]
name = "web-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.29.5",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "selenium>=4.33.0",
]
